# IronSight

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tauri.conf.json  vite.config.js
.github/workflows/: build-installers.yml  release.yml
IronSight/IronSight.xcodeproj/project.xcworkspace/xcuserdata/plague.xcuserdatad/: UserInterfaceState.xcuserstate
docs/: RELEASING.md  packaging.md
example/: xray_findings_sample.json
scripts/: build-installers.ps1  build-installers.sh  ensure-tauri-icons.mjs  run-axe.js  tauri.mjs  test-modal.js
src/: index.html  index.js  styles.css
src-tauri/: Cargo.toml  build.rs  detailed_report.json  entitlements.plist  generate-xray-report.ps1  generate-xray-report.sh  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
