[package]
name = "ironsight"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use a Tauri v2 release and omit unsupported features
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "3"
keyring = "1.0"
once_cell = "1.18"
 

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
image = "0.24"
